--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,12 @@
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <!--saxat från instr på http://ogp.me/-->
+    <meta property="og:title" content="Henrik Larsson" />
+    <meta property="og:type" content="blog" />
+    <meta property="og:url" content="https://hl222mn.github.io" />
+    <meta property="og:image" content="https://hl222mn.github.io/images/memyselfandi.jpg" />
+
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
